@@ -8,11 +8,12 @@ omnitech-omniston_solvation=Omniston Solvation __1__
 omnitech-omnic-acid=Omnic acid hydrolyzation __1__
 omnitech-omnisludge=Omnisludge dissolution __1__
 omnitech-omnistillation=__1__ omnistillation __2__
-omnitech-angels-omnicium-smelting=Advanced Omnicium Smelting
-omnitech-angels-omnicium-iron-alloy-smelting=Omniferrum Smelting
-omnitech-angels-omnicium-steel-alloy-smelting=Omnichalybs Smelting
-omnitech-angels-omnicium-aluminium-alloy-smelting=Omnilumina Smelting
-omnitech-angels-omnicium-tungsten-alloy-smelting=Omnifram Smelting
+omnitech-angels-omnicium-smelting=Advanced omnicium smelting
+omnitech-angels-omnicium-smelting-casting=Advanced omnicium smelting and casting
+omnitech-angels-omnicium-iron-alloy-smelting=Omniferrum smelting
+omnitech-angels-omnicium-steel-alloy-smelting=Omnichalybs smelting
+omnitech-angels-omnicium-aluminium-alloy-smelting=Omnilumina smelting
+omnitech-angels-omnicium-tungsten-alloy-smelting=Omnifram smelting
 
 [item-group-name]
 omnimatter=Omnimatter
