@@ -4,6 +4,7 @@ Date: ????
   Bugfixes:
     - Force bob´s infinite ore setting to false when hiding it
     - Fixed that all omnicium alloy recipes were enabled by default without angels refining
+    - Fixed that advanced omnicium smelting 1 had a wrong localised name set
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.19
 Date: 2021.08.16
